# anki-wiki

./: .gitignore  List_of_Thai_dishes.yaml  README.md  pyproject.toml  scrape.py
anki-wiki/: model.py  scrape.py
