#################
# initial setup #
#################
# pyenv virtualenv 3.10.2 anki-wiki
# pyenv activate anki-wiki

[tool.poetry]
name = "anki-wiki"
version = "0.1.0"
description = ""
authors = ["David Resnick <abunetta@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"

[tool.poetry.dev-dependencies]
beautifulsoup4  = "4.10.0"
genanki = "0.13.0"
lxml = "4.8.0"
pandas = "1.4.1"
requests = "2.27.1"
